# atlas

./: .gitignore  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
apps/api/: .env.example  README.md  alembic.ini  pyproject.toml
apps/api/migrations/: env.py  script.py.mako
apps/api/migrations/versions/: 20260703_0001_territoires.py  20260704_0002_batiments_osm.py  20260704_0003_portraits.py
apps/api/src/atlas/: __init__.py  config.py
apps/api/src/atlas/application/: __init__.py  analyses.py  territories.py
apps/api/src/atlas/domain/: __init__.py  analysis.py  territory.py
apps/api/src/atlas/infrastructure/: __init__.py
apps/api/src/atlas/infrastructure/connectors/: __init__.py  osm.py
apps/api/src/atlas/infrastructure/db/: __init__.py  analyses.py  seed_territories.py  territories.py
apps/api/src/atlas/infrastructure/knowledge_graph/: __init__.py
apps/api/src/atlas/infrastructure/mind/: __init__.py  converse.py  llm.py  persona.py  portrait.py
apps/api/src/atlas/infrastructure/reports/: __init__.py
apps/api/src/atlas/presentation/: __init__.py  app.py
apps/api/src/atlas/presentation/routers/: __init__.py  analyses.py  converse.py  health.py  ingest.py  portraits.py  territories.py
apps/api/src/atlas/workers/: __init__.py
apps/api/tests/: test_analyses.py  test_converse.py  test_health.py  test_osm_connector.py  test_portrait.py  test_seed_territories.py  test_territories.py
apps/web/: .npmrc  .prettierignore  README.md  (+5 more)
docs/: CONCEPTION.md  CONVENTIONS.md  IDENTITE.md
infra/: .env.example  README.md  docker-compose.yml
(+30 files in other folders)
